# Superkernel

./: .env.example  README.md  pyproject.toml
contracts/: PoSE.sol
core/blockchain/: polygon_integration.py  polygon_rpc_zdl.py
core/kernel/: superkernel.py  superkernel_zdl.py
core/oracle/: tace_oracle.py  tace_oracle_zdl.py
tests/: test_superkernel.py  test_superkernel_zdl.py
ui/cli/: cli_zdl.py  superkernel_cli.py
